--- a/src/assets/sass/_components.timeslot.scss
+++ b/src/assets/sass/_components.timeslot.scss
@@ -84,7 +84,7 @@
     z-index: 2;
 
     @include bp(medium) {
-      width: 50vw;
+      width: 45vw;
     }
   }
 
@@ -97,7 +97,6 @@
     line-height: 1.5;
     padding-left: 2rem;
     text-align: left;
-    width: 50%;
 
     @include bp(large) {
       padding-left: 4rem;
